--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,6 +58,7 @@ services:
       - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__BROKER_URL=redis://redis:6379/0
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
+      - AIRFLOW_CONN_POSTGRES_DEFAULT=postgresql://airflow:airflow@postgres:5432/airflow
     volumes:
       - ./.airflow/dags:/opt/airflow/dags
       - ./.airflow/logs:/opt/airflow/logs
@@ -82,6 +83,7 @@ services:
       - AIRFLOW__CELERY__RESULT_BACKEND=db+postgresql://airflow:airflow@postgres/airflow
       - AIRFLOW__CELERY__BROKER_URL=redis://redis:6379/0
       - AIRFLOW__CORE__LOAD_EXAMPLES=False
+      - AIRFLOW_CONN_POSTGRES_DEFAULT=postgresql://airflow:airflow@postgres:5432/airflow
     volumes:
       - ./.airflow/dags:/opt/airflow/dags
       - ./.airflow/logs:/opt/airflow/logs
@@ -116,3 +118,9 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8081:8080"
