--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    volumes:
+      - ./sql/init_schemas.sql:/docker-entrypoint-initdb.d/init_schemas.sql
 
   redis:
     image: redis:latest
@@ -40,6 +42,7 @@ services:
       - ./data:/opt/airflow/data
       - ./configs:/opt/airflow/configs
       - ./scripts:/opt/airflow/scripts
+      - ./sql:/opt/airflow/sql
     ports:
       - "8080:8080"
     command: webserver
@@ -69,6 +72,7 @@ services:
       - ./data:/opt/airflow/data
       - ./configs:/opt/airflow/configs
       - ./scripts:/opt/airflow/scripts
+      - ./sql:/opt/airflow/sql
     command: scheduler
     depends_on:
       postgres:
@@ -96,6 +100,7 @@ services:
       - ./data:/opt/airflow/data
       - ./configs:/opt/airflow/configs
       - ./scripts:/opt/airflow/scripts
+      - ./sql:/opt/airflow/sql
     command: celery worker
     depends_on:
       postgres:
