--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ __pycache__/
 *.pyc
 .env
 .DS_Store
-config/airflow_variables.json
 Data_Engineering_Project_Outline
 .airflow_home/
 .airflow/logs/
 /data/landing/
+/configs/
