--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -100,7 +100,7 @@ services:
       - ./configs:/opt/airflow/configs
       - ./scripts:/opt/airflow/scripts
       - ./sql:/opt/airflow/sql
-    command: celery worker
+    command: bash -c "rm -f /opt/airflow/airflow-worker.pid && airflow celery worker"
     depends_on:
       postgres:
         condition: service_healthy
